crates/formatter/tests/snapshots/snapshots__anki__storage__note__add_if_unique.snap
---
source: crates/formatter/tests/snapshots.rs
expression: formatted
---
insert or ignore into notes (
	id,
	guid,
	mid,
	mod,
	usn,
	tags,
	flds,
	sfld,
	csum,
	flags,
	data
)
values (?, ?, ?, ?, ?, ?, ?, ?, ?, 0, "");
