crates/formatter/tests/snapshots/snapshots__anki__storage__note__add_or_update.snap
---
source: crates/formatter/tests/snapshots.rs
expression: formatted
---
insert or replace into notes (
	id,
	guid,
	mid,
	mod,
	usn,
	tags,
	flds,
	sfld,
	csum,
	flags,
	data
)
values (?, ?, ?, ?, ?, ?, ?, ?, ?, 0, "")
