crates/formatter/tests/snapshots/snapshots__anki__storage__note__get.snap
---
source: crates/formatter/tests/snapshots.rs
expression: formatted
---
select id, guid, mid, mod, usn, tags, flds, cast (sfld as text), csum
from notes;
