crates/formatter/tests/snapshots/snapshots__anki__storage__note__get_tags.snap
---
source: crates/formatter/tests/snapshots.rs
expression: formatted
---
select id, mod, usn, tags from notes;
