crates/formatter/tests/snapshots/snapshots__anki__storage__note__get_without_fields.snap
---
source: crates/formatter/tests/snapshots.rs
expression: formatted
---
select id, guid, mid, mod, usn, tags, "", cast (sfld as text), csum from notes;
