crates/formatter/tests/snapshots/snapshots__anki__storage__note__is_orphaned.snap
---
source: crates/formatter/tests/snapshots.rs
expression: formatted
---
select count(id) = 0 from cards where nid = ?;
