crates/formatter/tests/snapshots/snapshots__anki__storage__note__notes_types_checksums_decks.snap
---
source: crates/formatter/tests/snapshots.rs
expression: formatted
---
select distinct
	notes.id,
	notes.mid,
	notes.csum,
	case when cards.odid = 0 then cards.did else cards.odid end as did
from notes join cards on notes.id = cards.nid;
