crates/formatter/tests/snapshots/snapshots__anki__storage__note__search_nids_setup.snap
---
source: crates/formatter/tests/snapshots.rs
expression: formatted
---
drop table if exists search_nids;
create temporary table search_nids (
	nid integer not null primary key
);
