crates/formatter/tests/snapshots/snapshots__anki__storage__note__update.snap
---
source: crates/formatter/tests/snapshots.rs
expression: formatted
---
update notes
set guid = ?, mid = ?, mod = ?, usn = ?, tags = ?, flds = ?, sfld = ?, csum = ?
where id = ?
