crates/formatter/tests/snapshots/snapshots__anki__storage__note__update_tags.snap
---
source: crates/formatter/tests/snapshots.rs
expression: formatted
---
update notes set mod = ?, usn = ?, tags = ? where id = ?
